Fixed the sidebar scrollbar

--- a/client/less/app.less
+++ b/client/less/app.less
@@ -754,11 +754,11 @@ div.items::-webkit-scrollbar-track-piece {
 	border-radius: 6px;
 }
 
-div.backlog.items::-webkit-scrollbar-thumb {
+div.sidebar .items::-webkit-scrollbar-thumb {
 	border: 3px solid #1b1e25;
 }
 
-div.backlog.items::-webkit-scrollbar-track-piece {
+div.sidebar .items::-webkit-scrollbar-track-piece {
 	background: #1b1e25;
 	border: 3px solid #1b1e25;
 }
